# Chatbot_trader

./: .env  .gitattributes  .gitignore  .vsconde:settings.json  README.md  app.py  avaliacoes_lstm.csv  avaliacoes_prophet.csv  avaliador_completo.py  bot_trader.py  cleanup_envs.sh  coletar_precos_binance.py  config.py  cotacao_ws.py  db.py  environment_macos.yml  gerar_csv_lstm.py  intraday.db  intraday_monitor.py  logger.py  logger_perda.py  lstm_forecaster.py  main.py  metodo_carregar_dados_real.py  model.py  mv install_and_clean_with_clone.sh setup_analiz_definitivo.sh  predict.py  prophet_forecaster.py  requirements.txt  requirements_macos.txt  resultados_prophet.csv  setup_analiz_definitivo.sh  setup_tensorflow_macos_v2.sh  test_lstm_batch.py  test_prophet.py  teste_cripto.py  train.py  train_cripto.py  verificador.py  verificador_setup.py  (+1 more)
analyz/: pyproject.toml
avaliacoes/: lstm_pendle-USD.csv  precos_reais_pendle-USD.csv  score_completo.csv
dados/: log_fallback.csv  precos_pendleUSD.csv  previsoes.db
logs_atr/: atr_logs.csv
modelos/: ABEV3_lstm.h5  ABEV3_scaler.pkl  BTC-USD_lstm.h5  BTC-USD_scaler.pkl
modelos_lstm/: PENDLE-USD_modelo.keras  PENDLE-USD_scaler.pkl  btc-USD_modelo.keras  btc-USD_scaler.pkl
models/: modelo_lstm.h5  modelo_lstm.keras  modelo_lstm_criptos.h5
previsoes_prophet/: prophet_PENDLEUSD.csv  prophet_RAYUSD.csv  prophet_SOLUSD.csv  prophet_btcUSD.csv
relatorios/: relatorio_teste_2025-04-25_1809.csv  relatorio_teste_2025-05-03_1914.csv
resultados_lstm/: lstm_metrics.csv
scripts/: scan_repo.sh
static/: manifest.json  sw.js
templates/: dashboard.html  dashboard_simplificado.html  erro.html  painel.html  planos.html  (+3 more)
(+17 files in other folders)
