[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analyz"
version = "0.1.0"
description = "AnaliZ - análise técnica, backtest e estratégias"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Wesley Maximiliano Braga", email = "wmaxib@yahoo.com.br" }]
license = { text = "All Rights Reserved" }

# Dependências gerais do projeto (ajuste livre)
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "peewee>=3.17",
  "Flask>=3.0",
  "Jinja2>=3.1",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "yfinance>=0.2",
  "weasyprint>=53.0",
  # Prophet / TensorFlow (instalações condicionais para Mac ARM)
  "prophet>=1.1 ; platform_system != 'Darwin' or platform_machine != 'arm64'",
  "tensorflow>=2.16 ; platform_system != 'Darwin' or platform_machine != 'arm64'",
  "tensorflow-macos>=2.16 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "tensorflow-metal>=1.1 ; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[tool.setuptools]
# diz ao setuptools para usar descoberta automática
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["analyz*"]
exclude = ["tests*","docs*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
